# raven

./: .gitignore  README.md  pyproject.toml  requirements.txt
.claude/agent-memory/senior-engineer/: MEMORY.md
docs/: CLI-GUIDE.md  GETTING-STARTED.md  PRODUCT.md
src/raven/: __init__.py  __main__.py
src/raven/agents/: __init__.py  analyst.py  base.py  scout.py  validator.py  weaponizer.py
src/raven/analysis/: __init__.py  binary_loader.py  matcher.py  patterns.py
src/raven/cli/: __init__.py  main.py  output.py
src/raven/cli/commands/: __init__.py  agent_cmd.py  analyze.py  config_cmd.py  exploit_cmd.py  scan_cmd.py  validate_cmd.py
src/raven/core/: __init__.py  config.py  knowledge_base.py  learning.py  llm.py  logger.py  memory.py  message_bus.py
src/raven/exploitation/: __init__.py  advanced_rop.py  encoders.py  heap.py  shellcode.py  templates.py
src/raven/utils/: __init__.py
tests/: __init__.py  conftest.py  test_advanced_rop.py  test_agents_base.py  test_analyst.py  test_binary_loader.py  test_cli.py  test_cli_phase2.py  test_cli_phase3.py  test_config.py  test_encoders.py  test_heap.py  test_knowledge_base.py  test_learning.py  test_llm.py  test_matcher.py  test_memory.py  test_message_bus.py  test_patterns.py  test_scout.py  test_shellcode.py  test_validator.py  test_weaponizer.py
tests/fixtures/: create_test_elf.py  test_elf64
